restructured constants